Fixed menuitems that was too small, correct size now

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -80,6 +80,10 @@ header {
     padding: 0;
 }
 
+#nav {
+    margin: 0;
+}
+
 .uppercase {
     text-transform: uppercase;
 }
@@ -107,6 +111,36 @@ header {
     margin-bottom: 40px;
 }
 
+.menuitem {
+    height: 120px;
+    text-align: center;
+    padding: 0;
+}
+
+.menuitem a {
+    width: 100%;
+    text-decoration: none;
+    color: #fff;
+    height: 120px;
+}
+
+.menuitem a i {
+    padding-top: 22px;
+    display: block;
+    color: #fafafa;
+    font-size: 26px;
+}
+
+.menuitem span {
+    display: block;
+    width: 100%;
+    padding-top: 5px;
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 14px;
+    font-weight: 300;
+    letter-spacing: 2px;
+}
 /*---------Footer*/
 
 footer {
